[#157887584] Resolved issue where the cart item count was not updating when adding either new list or recommendation items.  Also resolved issues with context menu when adding to list, cart, or change order, or creating new cart or list on mobile. Also included fixes for list, cart, and change order headers not refreshing on context menu modal.

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_item-details.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_item-details.scss
@@ -59,3 +59,7 @@
     width: 33%;
   }
 }
+
+.nav-tabs li a, .nav-tabs li a:hover, .nav-tabs li.active a:hover { // Added to allow all tabs to be on the same line for tablet view
+  padding: 12px 34px;
+}
